tests/auto/qml/qmltc/QmltcTests/delegate_context.qml
@@ -7,6 +7,7 @@ Text {
     ListView {
         id: listView
         model: 1
+        anchors.fill: parent // QTBUG-104780
 
         delegate: Text { // QV4::CompiledData::Object::IsComponent
             id: listViewDelegate
